add Langchain notebook

--- a/03-LangChain.ipynb
+++ b/03-LangChain.ipynb
@@ -2,198 +2,229 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dad4a5b3-3ea8-42b1-98d5-295940af6194",
+   "id": "86f84adb-3a39-469c-bd2a-2fc4c9fac5cd",
    "metadata": {},
    "source": [
-    "# Deploy a LLM\n",
+    "# Now we are going to use LangChain with our Model\n",
     "\n",
-    "Before proceeding with our lab, we will deploying a large language model from the Jumpstart model hub to a real-time SageMaker Endpoint.\n",
+    "LangChain integrates with SageMaker. Documentation for LangChain cam be found at https://python.langchain.com/en/latest/getting_started/getting_started.html\n",
     "\n",
-    "The model we will pick is the Finnish language fine-tuned model created by TurkuNLP research group.\n"
+    "Please select the Data Science 3.0 Kernel to run this Notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d0b200-83f7-4106-936e-976bb92f7b98",
+   "id": "fe893f35-71f2-494a-a333-077f878903b9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "%%capture\n",
-    "# Upgrade SageMaker SDK and get Widgets\n",
-    "!pip install ipywidgets==7.7 --quiet\n",
-    "!pip install --upgrade sagemaker --quiet"
+    "!pip install langchain"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f436e4-5c48-447a-a47b-e3e62835541b",
+   "id": "f2dac5b7-ba0a-4ec1-8923-dc9943a7d0d8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
+    "import boto3\n",
     "import json\n",
-    "from sagemaker import Session\n",
-    "from sagemaker.jumpstart.notebook_utils import list_jumpstart_models\n",
-    "from sagemaker.jumpstart.model import JumpStartModel\n",
-    "from sagemaker.huggingface import HuggingFaceModel, get_huggingface_llm_image_uri"
+    "from typing import Dict\n",
+    "from langchain import PromptTemplate, SagemakerEndpoint\n",
+    "from langchain.chains.question_answering import load_qa_chain\n",
+    "from langchain.chains import LLMRequestsChain, LLMChain\n",
+    "from langchain.llms.sagemaker_endpoint import LLMContentHandler\n",
+    "from langchain.docstore.document import Document\n",
+    "\n",
+    "region = boto3.session.Session().region_name\n",
+    "\n",
+    "sm_endpoint_name = \"TurkuNLP-gpt3-finnish-3B\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe7cba4-f31a-4f4c-9c98-261d41570d18",
+   "id": "dabcb8cf-0c66-4fdf-9beb-c9780fe58bc0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Let's get all Extractive Question Answer models from Jumpstart\n",
-    "all_models = list_jumpstart_models(filter='task == eqa')\n",
+    "example_doc_1 = \"\"\"\n",
+    "HUUHKAJAT otti perjantaina loppuunmyydyllä Olympiastadionilla yli 32 000 katsojan edessä karsintojen ensimmäisen kotivoiton. Se tuli vahvalla esityksellä, jossa avaintekijöitä olivat vastustajan vahvuuksien eliminointi ja Suomen hyökkäyspelin vaarallisuus.\n",
     "\n",
-    "# display the model-ids in a dropdown to select a model for inference.\n",
-    "model_dropdown = widgets.Dropdown(\n",
-    "    options=all_models,\n",
-    "    description=\"Select a model\",\n",
-    "    style={\"description_width\": \"initial\"},\n",
-    "    layout={\"width\": \"max-content\"},\n",
-    ")"
+    "Suomen kaikkien aikojen maalintekijästä Teemu Pukista on kehkeytynyt syöttökone näissä karsinnoissa. Hän syötti Joel Pohjanpalon maalin avausjaksolla ja Oliver Antmanin 2–0-johtomaalin toisella jaksolla.\n",
+    "\n",
+    "ENSIMMÄINEN minuutti näytti jo hyvin, mistä pelissä on kyse. Slovenia pyrki pelaamaan palloa ilmassa nopeasti hyökkääjilleen, ja Suomi pyrki hyökätessään hajottamaan vieraiden puolustusmuotoa ja pelaamaan palloa lyhyillä syötöillä eteenpäin.\n",
+    "\n",
+    "Suomi näytti heti siltä, että se pystyisi uhkaamaan Slovenian puolustusta. Ongelmana vain olivat alun syöttöharhat, kun Huuhkajat menetti pallon useampaan otteeseen alussa heikkojen syöttöjen takia.\n",
+    "\"\"\"\n",
+    "\n",
+    "docs = [\n",
+    "    Document(\n",
+    "        page_content=example_doc_1,\n",
+    "    )\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "449300bd-1dd7-4cc6-99c2-0b6e0f940f51",
+   "id": "d6ebe48e-8885-4212-baec-67a9db7f4368",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "display(model_dropdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3750195d-567c-48f1-978b-e00b63f60760",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "model_id = model_dropdown.value\n",
-    "my_model = JumpStartModel(model_id=model_id)\n",
-    "my_model.__dict__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53b66337-0998-43a7-9b40-7fb110f00b97",
-   "metadata": {},
-   "source": [
-    "Notice that for the Jumpstart models, we have the S3 asset, inference scripts, container definitions and so on."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5483d17c-d11f-4e11-b941-f75abfafc663",
-   "metadata": {},
-   "source": [
-    "# Let's Deploy the TurkuNLP LLM\n",
+    "query = \"\"\"Kuka voitti pelin?\"\"\"\n",
     "\n",
-    "While not immediately available in JumpStart, various models in different sizes trained by TurkuNLP can be found here in Hugging Face: https://huggingface.co/TurkuNLP. The Bloom model is large, and since we are pulling these models to local disk we will need to go with a more reasonable option such as https://huggingface.co/TurkuNLP/gpt3-finnish-large .\n",
+    "prompt_template = \"\"\"Käytä seuraavia kontekstin osia vastataksesi lopussa olevaan kysymykseen.\n",
     "\n",
-    "Note from the page that these *models are pure language models, meaning that they are not instruction finetuned for dialogue or answering questions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9fb64f4-d262-4b18-834e-d4076c2e6a90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "role = Session().get_caller_identity_arn()\n",
+    "{context}\n",
     "\n",
-    "MODEL_ID = 'TurkuNLP/gpt3-finnish-3B'\n",
-    "# Hub Model configuration. https://huggingface.co/models\n",
-    "hub = {\n",
-    "\t'HF_MODEL_ID': MODEL_ID,\n",
-    "\t'SM_NUM_GPUS': json.dumps(1)\n",
-    "}\n",
-    "\n",
-    "# create Hugging Face Model Class\n",
-    "huggingface_model = HuggingFaceModel(\n",
-    "\timage_uri=get_huggingface_llm_image_uri(\"huggingface\",version=\"0.8.2\"),\n",
-    "\tenv=hub,\n",
-    "\trole=role, \n",
+    "Kysymys: {question}\n",
+    "Vastaus: \"\"\"\n",
+    "PROMPT = PromptTemplate(\n",
+    "    template=prompt_template, input_variables=[\"context\", \"question\"]\n",
     ")\n",
     "\n",
-    "huggingface_model.__dict__"
+    "class ContentHandler(LLMContentHandler):\n",
+    "    content_type = \"application/json\"\n",
+    "    accepts = \"application/json\"\n",
+    "\n",
+    "    def transform_input(self, prompt: str, model_kwargs: Dict) -> bytes:\n",
+    "        input_str = json.dumps({\"inputs\": prompt, \"parameters\": model_kwargs})\n",
+    "        return input_str.encode('utf-8')\n",
+    "    \n",
+    "    def transform_output(self, output: bytes) -> str:\n",
+    "        response_json = json.loads(output.read().decode(\"utf-8\"))\n",
+    "        return response_json[0][\"generated_text\"]\n",
+    "\n",
+    "content_handler = ContentHandler()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6152eccc-f86c-4b82-875a-05dc15942fff",
-   "metadata": {
-    "tags": []
-   },
+   "id": "d62b8417-ae95-416c-8d9c-bbbfe29abdc7",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# deploy model to SageMaker Inference\n",
-    "predictor = huggingface_model.deploy(\n",
-    "    endpoint_name=MODEL_ID.replace(\"/\",\"-\"),\n",
-    "\tinitial_instance_count=1,\n",
-    "\tinstance_type=\"ml.g5.2xlarge\",\n",
-    "\tcontainer_startup_health_check_timeout=300,\n",
+    "chain = load_qa_chain(\n",
+    "    llm=SagemakerEndpoint(\n",
+    "        endpoint_name=sm_endpoint_name, \n",
+    "        region_name=region,\n",
+    "        model_kwargs={\"temperature\":0.1, \"max_new_tokens\": 10},\n",
+    "        content_handler=content_handler\n",
+    "    ),\n",
+    "    prompt=PROMPT\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8957312-28fb-4759-93de-648404a48acf",
+   "id": "d60df6ed-75c5-48d4-9074-f51f812447f3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "chain({\"input_documents\": docs, \"question\": query}, return_only_outputs=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1b1e93b-5ca4-4e6c-be26-f7f97b9148bc",
+   "metadata": {},
+   "source": [
     "\n",
-    "prompt = \"\"\"Onko seuraava lause positiivinen vai negatiivinen?\n",
-    "Lause: Täällä on erittäin hauskaa!\n",
-    "Vastaus: positiivinen\n",
     "\n",
-    "Onko seuraava lause positiivinen vai negatiivinen?\n",
-    "Lause: elokuva oli upea!\n",
-    "Vastaus:\"\"\"\n",
-    "\n",
-    "parameters = {\n",
-    "        \"top_k\": 3,\n",
-    "        \"top_p\": 0.7,\n",
-    "        \"max_new_tokens\": 50,\n",
-    "        \"temperature\": 0.7,\n",
-    "        \"no_repeat_ngram_size\": 2\n",
-    "}\n",
-    "\n",
-    "# send request to model\n",
-    "print(predictor.predict({\n",
-    "\t\"inputs\": prompt,\n",
-    "    \"parameters\" : parameters\n",
-    "})[0]['generated_text'])"
+    "## HTTP request chain"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81e57a0-18b8-4d16-b3ba-6eb5e4a95be1",
+   "id": "2fa76c90-9e66-4db0-b6b4-d834009d534f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "template = \"\"\"Between >>> and <<< are the raw search result text from google.\n",
+    "Extract the answer to the question '{query}' or say \"not found\" if the information is not contained.\n",
+    "Use the format\n",
+    "Extracted:<answer or \"not found\">\n",
+    ">>> {requests_result} <<<\n",
+    "Extracted:\"\"\"\n",
+    "\n",
+    "PROMPT = PromptTemplate(\n",
+    "    input_variables=[\"query\", \"requests_result\"],\n",
+    "    template=template,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a891049-a0b9-456e-ae52-cf4672cac7da",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "chain = LLMRequestsChain(\n",
+    "    llm_chain=LLMChain(\n",
+    "        llm=SagemakerEndpoint(\n",
+    "            endpoint_name=sm_endpoint_name, \n",
+    "            region_name=region,\n",
+    "            model_kwargs={\"temperature\":0.1, \"max_new_tokens\": 10},\n",
+    "            content_handler=content_handler),\n",
+    "        prompt=PROMPT\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2320cef1-3d70-4a90-9cd0-9d2f6ec3049b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "question = \"What are the Three (3) biggest countries, and their respective sizes?\"\n",
+    "inputs = {\n",
+    "    \"query\": question,\n",
+    "    \"url\": \"https://www.google.com/search?q=\" + question.replace(\" \", \"+\"),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83f04c57-63d9-4564-a364-503313559cb7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "chain(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4375edd3-a784-4a13-995f-98193b6f557d",
    "metadata": {},
    "outputs": [],
    "source": []
